--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "build:umd": "vite build --config vite.config.umd.ts",
     "build:css": "postcss src/lite-dailymotion-embed.css -o dist/lite-dailymotion-embed.css",
     "clean": "rimraf dist",
-    "lint": "prettier --check \"src/**/*.{ts,css,js,html}\" --cache",
-    "lint:fix": "prettier --write \"src/**/*.{ts,css,js,html}\"",
+    "lint": "prettier --check \"src/**/*.{ts,css,js,html}\" --cache && eslint \"src/**/*.{ts,js,css,html}\"",
+    "lint:fix": "prettier --write \"src/**/*.{ts,css,js,html}\" && eslint \"src/**/*.{ts,js,css,html}\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -52,10 +52,13 @@
     "url": ""
   },
   "devDependencies": {
+    "@eslint/css": "^0.10.0",
+    "@eslint/js": "^9.33.0",
     "@playwright/test": "^1.40.0",
     "@types/jest": "^29.5.8",
     "@types/node": "^20.9.0",
     "autoprefixer": "^10.4.16",
+    "eslint": "^9.33.0",
     "globals": "^16.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -66,6 +69,7 @@
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
     "typescript": "^5.9.2",
+    "typescript-eslint": "^8.39.1",
     "vite": "^5.0.0",
     "vite-plugin-dts": "^3.6.3"
   },
